Initial commit for new packages for ICL serial communication protocol for fiscal devices and implementation for Daisy brand.
Fix default encoding to UTF-8 in build.gradle in main project and in sample project.

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id "nebula.provided-base" version "2.2.2"
 }
 
+compileJava.options.encoding = 'UTF-8'
+
 group 'com.github.lanchon.fiscal-device'
 
 version '1.1.0'
